# gravitee-api-management

./: .aiignore  .dockerignore  .editorconfig  .eslintrc.js  .flattened-pom.xml  .gitignore  .jshintrc  .mergify.yml  .nxignore  .prettierignore  .prettierrc  .sdkmanrc  .snyk  .tmp-api.json  .tmp-apis.json  .tmp-disco-api-updated.json  .tmp-disco-api.json  .yo-rc.json  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTIBUTING.adoc  CONTRIBUTING.adoc  GIT_COMMIT  Jenkinsfile  LICENSE_TEMPLATE.txt  MCP_README.md  Makefile  README.adoc  README.md  SECURITY.md  Taskfile.dist.yml  Taskfile.yml  agent.skills  angular.json  apim_tracing_feature.md  appveyor.yml  assembly.xml  babel.config.js  (+25 more)
.agent-rules/: angular.md  general.md  java.md
.ai/: README.md  generated.yaml  manifest.yaml
.circleci/: Workflows.md  autoforward.py  config.back.yml  config.yml  continue_config.yml  githubChangelogGenerator.groovy  package_bundles.py  purge-outdated-storage-container.md  should_build.sh
.cursor/: mcp.json
.gemini/: style.md
.github/: AGENTS.md  CODEOWNERS  pull_request_template.md  (+2 more)
claude-code/gravitee-dev/: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
claude-code/gravitee-dev/.claude-plugin/: plugin.json
claude-code/gravitee-dev/skills/gravitee-plan/: SKILL.md
claude-code/gravitee-dev/src/gravitee_dev/: __init__.py  audit.py  lock.py  review_loop.py  types.py  worktree.py
claude-code/gravitee-dev/src/gravitee_dev/agents/: __init__.py  _base.py  commit.py  create_pr.py  developer.py  docs_sync.py  implement.py  pr_review.py  registry.py  safety_check.py  test_writer.py  validate_plan.py
claude-code/gravitee-dev/src/gravitee_dev/hooks/: __init__.py  _check.py  _gh_auth.py  _guard_tests.py  _protect_files.py  _safety_check.py  _secret_scan.py  _tdd_orchestration.py  _validate_plan.py
claude-code/gravitee-dev/src/gravitee_dev/tools/: __init__.py  presets.py
claude-code/gravitee-dev/src/gravitee_dev_cli/: __init__.py  cli.py
claude-code/gravitee-dev/tests/: conftest.py  test_audit_log.py  test_base.py  test_cli.py  test_concurrency_lock.py  test_developer.py  test_flow_budget.py  test_hooks.py  test_implement_orchestrator.py  test_plan_validation.py  test_presets.py  test_review_loop.py  test_runner.py  test_secret_scan.py  test_tdd_orchestration_hook.py  test_test_writer.py
docker/quick-setup/mcp-llm-agent/hub/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
docker/quick-setup/mcp-llm-agent/hub/agents/: README.md
docker/quick-setup/mcp-llm-agent/hub/agents/langgraph/: README.md  __main__.py  agent.py  pyproject.toml  task_manager.py
docker/quick-setup/mcp-llm-agent/hub/common/: types.py
docker/quick-setup/mcp-llm-agent/hub/common/client/: __init__.py  card_resolver.py  client.py
docker/quick-setup/mcp-llm-agent/hub/common/server/: __init__.py  server.py  task_manager.py  utils.py
docker/quick-setup/mcp-llm-agent/hub/common/utils/: in_memory_cache.py  push_notification_auth.py
docker/quick-setup/mcp-llm-agent/hub/hosts/: README.md
docker/quick-setup/mcp-llm-agent/hub/hosts/cli/: README.md  __main__.py  push_notification_listener.py  pyproject.toml
docker/quick-setup/mcp-llm-agent/hub/hosts/multiagent/: README.md  agent.py  host_agent.py  pyproject.toml  remote_agent_connection.py
docker/quick-setup/mcp-llm-agent/ui/: Dockerfile  main.py  pyproject.toml
docker/quick-setup/mcp-llm-agent/ui/components/: agent_list.py  api_key_dialog.py  async_poller.js  async_poller.py  chat_bubble.py  conversation.py  conversation_list.py  dialog.py  event_viewer.py  form_render.py  header.py  page_scaffold.py  poller.py  side_nav.py  task_card.py
docker/quick-setup/mcp-llm-agent/ui/pages/: agent_list.py  conversation.py  event_list.py  home.py  settings.py  task_list.py
docker/quick-setup/mcp-llm-agent/ui/service/: types.py
docker/quick-setup/mcp-llm-agent/ui/service/client/: client.py
docker/quick-setup/mcp-llm-agent/ui/service/server/: adk_host_manager.py  application_manager.py  in_memory_manager.py  server.py  test_image.py
docker/quick-setup/mcp-llm-agent/ui/state/: agent_state.py  host_agent_service.py  state.py
docker/quick-setup/mcp-llm-agent/ui/styles/: styles.py
docker/quick-setup/mcp-llm-agent/ui/tests/: test_adk_host_manager.py
docker/quick-setup/mcp-llm-agent/ui/utils/: agent_card.py
(+43529 files in other folders)
