[project]
name = "gravitee-dev"
version = "0.1.0"
description = "Composable CLI agents for Gravitee development workflows via Claude Agent SDK"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.58",
    "rich>=14.3.2",
    "typer>=0.15",
]

[project.scripts]
gravitee-dev = "gravitee_dev_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gravitee_dev", "src/gravitee_dev_cli"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25",
]
